A bit of work on 1.20.5/6 port, improve items and fix some other issues/crashes, making it usable with more mods (tested with PolymaniaForks + my own polymer mods)